--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -29,6 +29,10 @@ repo = 'vim-jp/vimdoc-ja'
 hook_add = 'set helplang=ja,en'
 
 [[plugins]]
+repo = 'lambdalisue/kensaku.vim'
+depends = 'denops.vim'
+
+[[plugins]]
 repo = 'RRethy/vim-illuminate'
 
 [[plugins]]
