--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,8 +1,8 @@
 # tmuxの設定を反映させる方法
 # tmux source ~/.tmux.conf
 
-# tmux起動時のシェルをzshにする
-set-option -g default-shell /bin/zsh
+# tmux起動時のシェルをhomebrewのzshにする
+set-option -g default-shell "$HOMEBREW_PREFIX/bin/zsh"
 
 # 256色対応
 set-option -g default-terminal "screen-256color"
