--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -61,5 +61,5 @@ lua_add = '''
 [[plugins]]
 repo = 'bronson/vim-trailing-whitespace'
 hook_add = '''
-  let g:extra_whitespace_ignored_filetypes = ['markdown', 'ddu-filer', 'mason']
+  let g:extra_whitespace_ignored_filetypes = ['markdown', 'ddu-ff', 'ddu-filer', 'mason']
 '''
