--- a/vim/rc/lsp.toml
+++ b/vim/rc/lsp.toml
@@ -67,7 +67,7 @@ lua_source = '''
         }
       }
     },
-    sumneko_lua = {
+    lua_ls = {
       settings = {
         Lua = {
           runtime = { version = 'LuaJIT' },
