--- a/vim/rc/ddu.toml
+++ b/vim/rc/ddu.toml
@@ -51,7 +51,7 @@ hook_add = '''
     \ })<CR>
 
   nnoremap <Leader>o <Cmd>call ddu#start(#{
-    \   name: 'filer',
+    \   name: 'file',
     \   sources: [#{name: 'file'}],
     \   ui: 'filer',
     \   resume: v:true
@@ -90,8 +90,8 @@ hook_add = '''
         \  winHeight: round(&lines * 0.8),
         \  winWidth: round(&columns * 0.45),
         \  previewSplit: "vertical",
-        \  previewCol: round(&columns * 0.51),
-        \  previewHeight: round(&lines * 0.81),
+        \  previewCol: round(&columns * 0.5),
+        \  previewHeight: round(&lines * 0.8),
         \  previewWidth: round(&columns * 0.45),
         \  autoAction: { 'name': 'preview' }
         \ }
@@ -151,7 +151,7 @@ hook_source = '''
     \   },
     \   sourceParams: #{
     \     file_rec: #{
-    \       ignoredDirectories: ['.git', 'node_modules', '.cache']
+    \       ignoredDirectories: ['.git', 'node_modules', '.cache', 'target']
     \     },
     \     rg: #{
     \       args: ['--json', '--ignore-case']
@@ -208,6 +208,7 @@ on_source = 'ddu.vim'
 ddu-ff = '''
   nnoremap <buffer> <CR>  <Cmd>call ddu#ui#ff#do_action('itemAction')<CR>
   nnoremap <buffer> <ESC> <Cmd>call ddu#ui#ff#do_action('quit')<CR>
+  nnoremap <buffer> i     <Cmd>call ddu#ui#ff#do_action('openFilterWindow')<CR>
 '''
 ddu-ff-filter = '''
   if b:ddu_ui_name ==# 'line'
