--- a/vim/rc/dein-lazy.toml
+++ b/vim/rc/dein-lazy.toml
@@ -171,7 +171,12 @@ repo = 'petertriho/nvim-scrollbar'
 on_event = 'WinScrolled'
 lua_source = '''
   require('scrollbar').setup {
-    handle = { color = '#4B4B4B' }
+    handle = { color = '#4B4B4B' },
+    excluded_filetypes = {
+        "vim-ui-input",
+        "ddu-ff-filter",
+        "ddu-filer"
+    }
   }
 '''
 
