--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -5,8 +5,11 @@
 set-option -g default-shell "$HOMEBREW_PREFIX/bin/zsh"
 
 # 256色対応
-set-option -g default-terminal "screen-256color"
+set-option -g default-terminal "tmux-256color"
 set-option -ga terminal-overrides ",$TERM:Tc"
+
+# ↓はよくわかってない。これがないとtmuxで下線に色がつかなくなる。
+set -as terminal-overrides ',*:Setulc=\E[58::2::%p1%{65536}%/%d::%p1%{256}%/%{255}%&%d::%p1%{255}%&%d%;m'
 
 source ~/dotfiles/tmux/config/option.tmux.conf
 source ~/dotfiles/tmux/config/status.tmux.conf
