--- a/vim/rc/dein.toml
+++ b/vim/rc/dein.toml
@@ -18,11 +18,11 @@ hook_add = '''
 '''
 
 # LuaCacheClear / LuaCacheLog / LuaCacheProfile
-[[plugins]]
-repo = 'lewis6991/impatient.nvim'
-hook_add = '''
-  lua require('impatient')
-'''
+# [[plugins]]
+# repo = 'lewis6991/impatient.nvim'
+# hook_add = '''
+#   lua require('impatient')
+# '''
 
 [[plugins]]
 repo = 'vim-jp/vimdoc-ja'
@@ -42,7 +42,15 @@ hook_add = 'colorscheme necodark'
 
 [[plugins]]
 repo = 'joshdick/onedark.vim'
-# hook_add = 'colorscheme onedark'
+
+[[plugins]]
+repo = 'EdenEast/nightfox.nvim'
+
+[[plugins]]
+repo = 'folke/tokyonight.nvim'
+
+[[plugins]]
+repo = 'tomasiser/vim-code-dark'
 
 [[plugins]]
 repo = 'Shougo/context_filetype.vim'
@@ -50,13 +58,4 @@ hook_add = '''
   let g:context_filetype#ignore_patterns = #{
     \ toml: ['^\s*#\s*'],
     \ }
-'''
-
-[[plugins]]
-repo = 'rcarriga/nvim-notify'
-lua_add = '''
-  vim.notify = function(...)
-    vim.notify = require('notify')
-    vim.notify(...)
-  end
 '''
