--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,7 +2,10 @@
 # tmux source ~/.tmux.conf
 
 # tmux起動時のシェルをhomebrewのzshにする
-set-option -g default-shell "$HOMEBREW_PREFIX/bin/zsh"
+# brew の zsh 使うと _arguments:comparguments:409: not enough arguments
+# って出るからひとまず標準の zsh 使う
+# set-option -g default-shell "$HOMEBREW_PREFIX/bin/zsh"
+set-option -g default-shell "/bin/zsh"
 
 # 256色対応
 set-option -g default-terminal "tmux-256color"
