--- a/vim/rc/ddc.toml
+++ b/vim/rc/ddc.toml
@@ -16,10 +16,10 @@ hook_add = '''
 
   function! s:CommandlinePre() abort
     cnoremap <expr><Tab>  pum#visible() ? pum#map#insert_relative(+1) : ddc#map#manual_complete()
-    cnoremap <expr><C-n>  pum#visible() ? pum#map#insert_relative(+1) : '<Down>'
-    cnoremap <expr><C-p>  pum#visible() ? pum#map#insert_relative(-1) : '<Up>'
-    cnoremap <expr><Down> pum#visible() ? pum#map#insert_relative(+1) : '<Down>'
-    cnoremap <expr><Up>   pum#visible() ? pum#map#insert_relative(-1) : '<Up>'
+    cnoremap <expr><C-n>  pum#visible() ? pum#map#insert_relative(-1) : '<Down>'
+    cnoremap <expr><C-p>  pum#visible() ? pum#map#insert_relative(+1) : '<Up>'
+    cnoremap <expr><Down> pum#visible() ? pum#map#insert_relative(-1) : '<Down>'
+    cnoremap <expr><Up>   pum#visible() ? pum#map#insert_relative(+1) : '<Up>'
     cnoremap <expr><CR>   pum#visible() && pum#complete_info()['selected'] != -1 ? pum#map#confirm() : '<CR>'
     autocmd User DDCCmdlineLeave ++once call s:CommandlinePost()
     autocmd InsertEnter <buffer> ++once call s:CommandlinePost()
